# thoth

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .prettierrc.json  .travis.yml  .yarnrc.yml  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  TERMS_OF_SERVICE.md  biome.json  commands.lock.json  crowdin.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  justfile  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.eslint.json  tsconfig.json  turbo.json  y.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  renovate.json
.github/.husky/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/hooks/: pre-commit
.github/workflows/: cd.yml  cd_commands.yml  cd_thothd.yml  cd_website.yml  codeql-analysis.yml  lint.yml  test.yml
.husky/: commit-msg
.yarn/plugins/: plugin-git-hooks.cjs
apps/bot/: .prettierrc.js  Dockerfile  bunfig.toml  package.json  tsconfig.json
apps/bot/src/: index.ts  jobs.ts
apps/web/: .eslintrc.json  .prettierrc.json  _redirects  astro-i18next.config.mjs  astro.config.mjs  package.json  tsconfig.eslint.json  tsconfig.json
apps/web/src/: env.d.ts  themeStore.ts  util.ts
docker/gateway/: ._env
docker/grafana/: Dockerfile
docker/grafana/dashboards/: Docker.json  Thoth.json
docker/postgres/: 01-init.sql  02-metabase-roles.sh  Dockerfile  init.sql
docker/prometheus/: Dockerfile  prometheus.yml
docker/promtail/: promtail-config.yml
docker/proxy/: .env
docs/superpowers/plans/: 2026-04-18-metrics-pipeline.md
docs/superpowers/specs/: 2026-04-18-metrics-design.md
legal/: PRIVACY_POLICY.md
lib/: index.ts
locales/da/: translation.json
locales/da-DK/: translation.json
locales/de/: translation.json
locales/de-DE/: translation.json
locales/en-US/: translation.json
locales/es-ES/: translation.json
locales/fi/: translation.json
locales/fr/: translation.json
locales/he-IL/: translation.json
locales/ja-JP/: translation.json
locales/nl/: translation.json
locales/nl-NL/: translation.json
locales/no-NO/: translation.json
locales/pl/: translation.json
locales/pl-PL/: translation.json
locales/pt-BR/: translation.json
locales/ru/: translation.json
locales/ru-RU/: translation.json
locales/sv-SE/: translation.json
locales/uk/: translation.json
locales/uk-UA/: translation.json
locales/zh-CN/: translation.json
services/bot/: Dockerfile  package.json  tsconfig.json
services/bot/src/: index.ts  jobs.ts
services/thoth/: Cargo.toml
services/thoth/locales/de/: translation.json
services/thoth/locales/fr/: translation.json
services/thoth/locales/pt-BR/: translation.json
services/thoth/locales/uk/: translation.json
services/thoth/src/: config.rs  datamuse.rs  gateway.rs  limit.rs  main.rs  state.rs
services/thoth/src/commands/: general.rs  main.rs  mod.rs
services/thoth/src/commands/general/: adjective.rs  close_rhyme.rs  definition.rs  holonyms.rs  homophones.rs  hyponyms.rs  match_word.rs  noun.rs  rhyme.rs  similar_meaning.rs  similar_spelling.rs  sounds_like.rs  that_follow.rs  triggers.rs
services/thoth/src/commands/util/: ping.rs
services/thothd/src/: config.rs  context.rs  gateway.rs  main.rs  metrics.rs  queue.rs
services/website/: .eslintrc.json  next.config.js  package.json  readme.md  tsconfig.eslint.json  tsconfig.json
src/: config.rs  index.ts  jobs.ts  main.rs  rest.rs
src/bot/client/: ThothClient.ts
src/bot/inhibitors/: sendMessages.ts
src/bot/util/: Util.ts  _version.js  constants.ts  index.ts  logger.ts
src/commands/general/: adjective.ts  close-rhyme.ts  definition.ts  holonyms.ts  homophones.ts  hyponyms.ts  match-word.ts  match.ts  noun.ts  rhyme.ts  similar-meaning.ts  similar-spelling.ts  sounds-like.ts  that-follow.ts  triggers.ts  word-of-the-day.ts
src/events/: debug.ts  guildCreate.ts  guildDelete.ts  interactionCreate.ts  ready.ts
src/scripts/: deploy.ts  deployAll.ts  deployDev.ts  generate.ts
src/structures/: Command.ts  Metrics.ts  REST.ts  RedisManager.ts  index.ts
src/util/: constants.ts  datamuse.ts  index.ts  logger.ts  respond.ts  symbols.ts
thothd/: .gitignore  Cargo.toml  Dockerfile  thothd.toml
thothd/src/: config.rs  gateway.rs  main.rs  metrics.rs
(+253 files in other folders)
