[package]
name = "thoth"
version = "0.1.0"
authors = ["Carter Himmel <carter@elhnet.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
dotenv = "0.15"
env_logger = "0.7"
envy = "0.4"
lazy_static = "1.4"
log = "0.4" 
#proxy = { git = "https://github.com/spec-tacles/proxy", package = "spectacles-proxy-bin" }
proxy = { git = "https://github.com/Fyko/proxy", branch = "patch-2", package = "spectacles-proxy", features = ["redis-ratelimiter"] }
rustacles-brokers = { git = "https://github.com/spec-tacles/rustacles", branch = "feat/rpc" }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }