[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
futures = "0.3.24"
hyper = { version = "^0.14", features = ["full"] }
hyper-rustls = { default-features = false, features = ["http1", "http2"], version = "0.23" }
lazy_static = "1.4.0"
prometheus = "0.13.2"
serde = "1"
config = "0.13"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "^0.3"
twilight-gateway = { version = "^0.13", default-features = false, features = ["rustls-webpki-roots"] }
twilight-http = { version = "^0.13", default-features = false, features = ["rustls-webpki-roots"] }
twilight-model = { version = "^0.13" }
warp = "0.3.3"
axum = { version = "0.5", features = ["headers"] }
