[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.5", features = ["headers"] }
config = "0.13"
futures = "0.3.24"
hyper = { version = "^0.14", features = ["client", "http1"] }
hyper-rustls = { default-features = false, features = ["http1", "http2"] }
lazy_static = "^1"
prometheus = "^0.13"
serde = "^1"
tokio = { version = "^1", features = ["full"] }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
twilight-gateway = { version = "0.13", default-features = false, features = ["rustls-webpki-roots"] }
twilight-http = { version = "0.13", default-features = false, features = ["rustls-webpki-roots"] }
twilight-model = { version = "0.13" }
